Formulario con material

--- a/Práctica/Front_End/Entregable/angular/subscription_form/src/app/app.component.html
+++ b/Práctica/Front_End/Entregable/angular/subscription_form/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>{{ title }}</h1>
-<div>
-  <app-subscription-form></app-subscription-form>
+<div class="container">
+  <h1 class="title">Formulario de Suscripción</h1>
+  <div class="form-container">
+    <app-subscription-form></app-subscription-form>
+  </div>
 </div>
