--- a/Práctica/Front_End/Entregable/angular/subscription_form/src/app/app.component.css
+++ b/Práctica/Front_End/Entregable/angular/subscription_form/src/app/app.component.css
@@ -1,3 +1,22 @@
-h1 {
-  color: #333;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.title {
+  margin-bottom: 16px;
+}
+
+.form-container {
+  width: auto;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
