--- a/Práctica/Front_End/Entregable/angular/subscription_form/src/app/subscription-form/subscription-form.component.css
+++ b/Práctica/Front_End/Entregable/angular/subscription_form/src/app/subscription-form/subscription-form.component.css
@@ -1,20 +1,20 @@
 form {
-  max-width: 400px;
+  max-width: 80%;
   margin: 20px auto;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  background-color: #fff;
 }
 
 label {
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
-input {
+input, mat-form-field {
   width: 100%;
-  padding: 8px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   box-sizing: border-box;
 }
 
@@ -30,3 +30,9 @@ button {
 button:hover {
   background-color: #45a049;
 }
+
+mat-label {
+  display: block;
+  margin-bottom: 8px;
+}
+
