--- a/Práctica/Front_End/Entregable/angular/Reactive_Form/src/app/app.component.html
+++ b/Práctica/Front_End/Entregable/angular/Reactive_Form/src/app/app.component.html
@@ -10,4 +10,4 @@
     <p>No hay clientes</p>
   </div>
 
-  <app-reactive-form [getMaxId]="getMaxId" (addUserEvent)="addUser($event)"></app-reactive-form>
+  <app-reactive-form (addUserEvent)="addUser($event)"></app-reactive-form>
