--- a/Práctica/Front_End/Entregable/angular/Reactive_Form/src/app/reactive-form/reactive-form.component.html
+++ b/Práctica/Front_End/Entregable/angular/Reactive_Form/src/app/reactive-form/reactive-form.component.html
@@ -1,45 +1,45 @@
 <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
 
   <label>Nombre: <input type="text" formControlName="nombre"></label>
-  <p style="color: red;"> {{ registrationForm.controls.nombre.invalid ? "Nombre requerido" : "" }} </p>
+  <p style="color: red;"> {{ registrationForm.get('nombre')?.invalid ? "Nombre requerido" : "" }} </p>
 
   <label>Apellido: <input type="text" formControlName="apellido"></label>
-  <p style="color: red;"> {{ registrationForm.controls.apellido.invalid ? "Apellido requerido" : "" }} </p>
+  <p style="color: red;"> {{ registrationForm.get('apellido')?.invalid ? "Apellido requerido" : "" }} </p>
 
   <label>Email: <input type="email" formControlName="email"></label>
   <p style="color: red;"> 
-    {{ registrationForm.controls.email.invalid && registrationForm.controls.email.errors?.['required'] ? "Email requerido" : ""}} 
-    {{ registrationForm.controls.email.invalid && registrationForm.controls.email.errors?.['email'] ? "Ingresa un correo electrónico válido" : "" }}
+    {{ registrationForm.get('email')?.invalid && registrationForm.get('email')?.errors?.['required'] ? "Email requerido" : ""}} 
+    {{ registrationForm.get('email')?.invalid && registrationForm.get('email')?.errors?.['email'] ? "Ingresa un correo electrónico válido" : "" }}
   </p>
 
   <label>Confirmarción de Email: <input type="email" formControlName="emailCheck"></label>
-  <p style="color: red;" *ngIf="registrationForm.controls.emailCheck.hasError('emailNoCoincide') && registrationForm.controls.emailCheck.touched"> 
-    {{ registrationForm.controls.emailCheck.errors?.['required'] ? "Validar email requerido" : "Los correos electrónicos no coinciden" }} 
+  <p style="color: red;" *ngIf="registrationForm.get('emailCheck')?.hasError('emailNoCoincide') && registrationForm.get('emailCheck')?.touched"> 
+    {{ registrationForm.get('emailCheck')?.errors?.['required'] ? "Validar email requerido" : "Los correos electrónicos no coinciden" }} 
   </p>
 
   <label>Teléfono: <input type="tel" formControlName="tel"></label>
-  <p style="color: red;" *ngIf="registrationForm.controls.tel.hasError('required') && registrationForm.controls.tel.touched">
+  <p style="color: red;" *ngIf="registrationForm.get('tel')?.hasError('required') && registrationForm.get('tel.touched')">
     Teléfono requerido
   </p>
   <p style="color: red;"
-    *ngIf="registrationForm.controls.tel.hasError('pattern') && registrationForm.controls.tel.touched">
-    {{ registrationForm.controls.tel.errors?.['pattern'] ? "Ingresa un número de teléfono válido" : "" }}
+    *ngIf="registrationForm.get('tel')?.hasError('pattern') && registrationForm.get('tel')?.touched">
+    {{ registrationForm.get('tel')?.errors?.['pattern'] ? "Ingresa un número de teléfono válido" : "" }}
   </p>
 
   <label>Contraseña: <input type="password" formControlName="pw"></label>
   <p style="color: red;"
-    *ngIf="registrationForm.controls.pw.hasError('required') && registrationForm.controls.pw.touched">
+    *ngIf="registrationForm.get('pw')?.hasError('required') && registrationForm.get('pw')?.touched">
     Contraseña requerida
   </p>
-  <p style="color: red;" *ngIf="registrationForm.controls.pw.hasError('pattern') && registrationForm.controls.pw.touched">
-    {{ registrationForm.controls.pw.errors?.['pattern'] ? "La contraseña debe contener al menos un número y una letra" : "" }}
+  <p style="color: red;" *ngIf="registrationForm.get('pw')?.hasError('pattern') && registrationForm.get('pw')?.touched">
+    {{ registrationForm.get('pw')?.errors?.['pattern'] ? "La contraseña debe contener al menos un número y una letra" : "" }}
   </p>
 
   <label>Recibir Notificaciones: <input type="checkbox" formControlName="notificaciones"></label>
-  <p style="color: red;"> {{ registrationForm.controls.notificaciones.invalid }} </p>
+  <p style="color: red;"> {{ registrationForm.get('notificaciones')?.invalid }} </p>
 
   <label>Aceptar los Términos y Condiciones: <input type="checkbox" formControlName="terminos"></label>
-  <p style="color: red;"> {{ registrationForm.controls.terminos.invalid ? "Aceptar Términos requerido" : "" }} </p>
+  <p style="color: red;"> {{ registrationForm.get('terminos')?.invalid ? "Aceptar Términos requerido" : "" }} </p>
 
   <button type="submit" [disabled]="registrationForm.invalid">Enviar</button>
   <button type="button" (click)="limpiar()">Limpiar</button>
