--- a/TpFinalPrestamos/FE_CRUD_Prestamos/src/app/components/ver-persona/ver-persona.component.html
+++ b/TpFinalPrestamos/FE_CRUD_Prestamos/src/app/components/ver-persona/ver-persona.component.html
@@ -2,6 +2,8 @@
   <h1>Ver Persona</h1>
 </div>
 
+<app-spinner *ngIf="loading"></app-spinner>
+
 <div *ngIf="persona != null" class="container">
   <mat-card class="card">
 
